Update final report

--- a/doc/finalreport/bibliography.bib
+++ b/doc/finalreport/bibliography.bib
@@ -2,7 +2,7 @@
 	title = {MIT License},
 	url = {http://opensource.org/licenses/MIT},
 	author = {Massachusetts Institute of Technology},
-	note = {(\url{http://opensource.org/licenses/MIT}) Accessed: 2015-05-04}
+	note = {(\url{http://opensource.org/licenses/MIT}) Accessed: 2015-05-04 \\ AWESOME is licensed under the MIT license.}
 }
 
 @misc{gplv3afferolicense,
@@ -11,21 +11,21 @@
 	author = {Free Software Foundation, Inc.},
 	month = nov,
 	year = {2007},
-	note = {(\url{https://www.gnu.org/licenses/agpl-3.0.html}) Accessed: 2015-05-04}
+	note = {(\url{https://www.gnu.org/licenses/agpl-3.0.html}) Accessed: 2015-05-04 \\ The AWESOME prototype got relicensed to the AGPL v3}
 }
 
 @misc{phpmailer,
 	author = {},
 	title = {PHPMailer GitHub Repository},
 	url = {https://github.com/PHPMailer/PHPMailer},
-	note = {(\url{https://github.com/PHPMailer/PHPMailer}) Accessed: 2015-04-12}
+	note = {(\url{https://github.com/PHPMailer/PHPMailer}) Accessed: 2015-04-12 \\ AWESOME uses PHPMailer to send mail via SMTP. It is licensed under the LGPL v2 license.}
 }
 
 @misc{php-mvc-tutorial,
 	author = {Anant Garg},
 	title = {Write your own PHP MVC Framework},
 	url = {http://anantgarg.com/2009/03/13/write-your-own-php-mvc-framework-part-1/},
-	note = {(\url{http://anantgarg.com/2009/03/13/write-your-own-php-mvc-framework-part-1/}) Accessed: 2015-02-15},
+	note = {(\url{http://anantgarg.com/2009/03/13/write-your-own-php-mvc-framework-part-1/}) Accessed: 2015-02-15 \\ This is the set of tutorials I followed to make my MVC framework for AWESOME.},
 	month = mar,
 	year = {2009}
 }
@@ -34,7 +34,7 @@
 	author = {Anonymous},
 	title = {Module evaluation questionnaires : Student evaluation  : Teaching and Learning Development Unit},
 	url = {http://www.sussex.ac.uk/tldu/ideas/eval/ceq},
-	note = {(\url{http://www.sussex.ac.uk/tldu/ideas/eval/ceq}) Accessed: 2015-05-05},
+	note = {(\url{http://www.sussex.ac.uk/tldu/ideas/eval/ceq}) Accessed: 2015-05-05 \\ Sussex offer an online system for collecting module feedback, called \acf{MEQ}},
 	howpublished = {University of Sussex}
 }
 
@@ -42,7 +42,7 @@
 	author = {Anonymous},
 	title = {Student Module Evaluation},
 	url = {http://www.westminster.ac.uk/study/current-students/your-studies/student-surveys/student-module-evaluation},
-	note = {(\url{http://www.westminster.ac.uk/study/current-students/your-studies/student-surveys/student-module-evaluation}) Accessed: 2015-05-05},
+	note = {(\url{http://www.westminster.ac.uk/study/current-students/your-studies/student-surveys/student-module-evaluation}) Accessed: 2015-05-05 \\ The University of Westminster offer an online system for collecting module feedback, called \acf{SME}},
 	howpublished = {University of Westminster, London}
 }
 
@@ -51,7 +51,7 @@
 	title = {Use of Quizdom as a Means of Assessing Student Comprehension of Lecture Material},
 	url = {http://cadair.aber.ac.uk/dspace/bitstream/handle/2160/7419/2009%20-%20McEWAN,%20N.%20-%20TC2%20-%20Use%20of%20Quizdom%20as%20a%20Means%20of%20Assessing%20Student%20Comprehension%20of%20Lecture%20Material.pdf?sequence=1},
 	year = {2009},
-	note = {(\url{http://cadair.aber.ac.uk/dspace/bitstream/handle/2160/7419/2009%20-%20McEWAN,%20N.%20-%20TC2%20-%20Use%20of%20Quizdom%20as%20a%20Means%20of%20Assessing%20Student%20Comprehension%20of%20Lecture%20Material.pdf?sequence=1}) Accessed: 2015-05-05}
+	note = {(\url{http://cadair.aber.ac.uk/dspace/bitstream/handle/2160/7419/2009%20-%20McEWAN,%20N.%20-%20TC2%20-%20Use%20of%20Quizdom%20as%20a%20Means%20of%20Assessing%20Student%20Comprehension%20of%20Lecture%20Material.pdf?sequence=1}) Accessed: 2015-05-05 \\ A writeup on using Qwizdom in lectures at \acf{AU} and average Qwizdom response rates.}
 }
 
 @misc{c2-rubber-ducking,
@@ -60,7 +60,7 @@
 	url = {http://c2.com/cgi/wiki?RubberDucking},
 	month = oct,
 	year = {2014},
-	note = {(\url{http://c2.com/cgi/wiki?RubberDucking}) Accessed: 2015-04-30},
+	note = {(\url{http://c2.com/cgi/wiki?RubberDucking}) Accessed: 2015-04-30 \\ Rubber ducking is the act of talking through a problem to bring yourself to a solution.},
 	howpublished = {Portland Pattern Repository}
 }
 
@@ -82,7 +82,8 @@
     title = {{Multiple surveys of students and survey fatigue}},
     url = {http://dx.doi.org/10.1002/ir.101},
     volume = {2004},
-    year = {2004}
+    year = {2004},
+    note = {\\ Research into how giving students multiple surveys results in a drop in response rate.}
 }
 
 @article{1993,
