--- a/doc/finalreport/evaluation.tex
+++ b/doc/finalreport/evaluation.tex
@@ -53,7 +53,7 @@
 	
 	\section{Degree}
 	
-	Working on \ac{AWESOME} has been very relevant to my degree, G401, as it has made me tackle a significant amount of work, not only from scratch, but also taking over an existing one and making informed decisions on the best course of action.
+	Working on \ac{AWESOME} has been very relevant to my degree, G401, as it has made me tackle a significant amount of work, not only from scratch, but also taking over an existing one learning what not to do in a project!
 	
 	\section{Upper Management}
 	
