Update final report

--- a/doc/finalreport/appendices.tex
+++ b/doc/finalreport/appendices.tex
@@ -2,7 +2,34 @@
 
 	\chapter{Outline Project Specification}
 	\includepdf[pages=-,scale=.8,pagecommand={}]{../outlinespec/beb12_OutlineProjectSpecification.pdf}
-
+	
+	\chapter{User Feedback}
+	\label{app:userfeedback}
+	
+	\begin{itemize}
+\item Looks sleek and modern
+\item This question needs to be at the end of the questionnaire. For CS12320 we need a "This lecturer did not teach me for this semester" option.
+\item Can't compare it to the old one having never used it
+\item The first question is a question about how much I like a new system I have yet to use properly this question should be last :P
+\item It doesn't work properly for me on anything except an IS computer running Internet Explorer 9. The irony.
+\item I don't remember/didn't use the old system
+\item Difference not really noticeable using it, looks a deal nicer though.
+\item Considering this is the first question you have asked me, it's a bit early to tell.
+\item Very clean, much better than the last system. Nice job.
+\item Much easier.
+\item Half of the lecturers I'm asked about never taught me in the subjects.
+\item Looking very nice, great to see that you've nearly finished. Tidy up that language selector though.
+\item Looks nice and simple to use!
+\item It would be nice if it was publicly accessible but I guess this is a beta.
+\item Modules need to be more blocked off from each other, rather than just using headers.
+\item I think this evaluation is great. It's personalised so we don't have to scroll through lot's of n/a modules. The layout is good, and the page doesn't seem endless (maybe that's because there's only 2 modules for me this year?). The only thing that might be worth adding is a little note to say if the feedback submitted will be anonymous. And maybe another box just to add any other comments on the department. I think maybe that's not included in the scope of this evaluation, but it would be nice to just be able to jot down any other feedback on the department as a whole. Apart from those two points, I think it's a massive improvement on the former system.
+\item Looks pretty swish.
+\item Seems like a huge improvement over the old system and very user friendly!
+\item It's nice to have a personalised system rather than the usual generic one whereby a lecture is interrupted!
+\item I really like the fact that the system automatically recognises my modules so that I don't have to manually find and select them.
+\item The notification email could do with telling the user if the survey is confidential or not. Saying that its a personalised survey may suggest that the answers are logged against peoples user names and maybe reluctant to answer honestly.
+\item FIX HTTPS PLEASE!!!
+	\end{itemize}
 
 	\chapter{Test Tables}
 	\label{app:testtables}
