--- a/doc/finalreport/testing.tex
+++ b/doc/finalreport/testing.tex
@@ -23,6 +23,11 @@
 	
 	User testing revealed some useful information via the feedback form, as well as through a question in the survey which was asked about how easy \ac{AWESOME} was to use.
 	
+	\subsection{User's thoughts on \ac{AWESOME}}
+	
+	As the user testing had a question on how easy \ac{AWESOME} was to use, and any comments regarding it, I got some valuable feedback through that.
+	Comments left about \ac{AWESOME} can be found in Appendix \autoref{app:userfeedback}.
+	
 	\section{Acceptance Testing}
 	
 	Acceptance testing was carried out on the submitted version of \ac{AWESOME} and results in test tables can be found in Appendix \autoref{app:testtables} with 16/18 (89\%) of tests passing.
